CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(euler C CXX)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/solutions)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/launcher)

find_library(GMP_LIBS NAMES gmp gmp.h)

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(solutions)
