MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
      LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()

SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_LIST_DIR})

FOREACH(subdir ${SUBDIRS})
  ADD_LIBRARY(test${subdir} MODULE ${CMAKE_CURRENT_LIST_DIR}/${subdir}/mod)
  TARGET_LINK_LIBRARIES(test${subdir} utils gmp)
  TARGET_COMPILE_OPTIONS(test${subdir} PRIVATE "-O2")
ENDFOREACH()
